--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<em></em>
 				</header>
 				<div class="form-row">
-					<label>Ваше ФИО</label>
-					<input type="text" id="form-input-fio" placeholder="Иванов Иван Иванович" />
+					<label>Контакт (емейл, телеграм)</label>
+					<input type="text" id="form-input-fio" placeholder="sasha@volkov.com" />
 				</div>
 				<div class="form-row form-dollar-eth-holder">
 					<div>
