--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 				</div>
 				<footer></footer>
 			</article>
-			<script type="text/javascript" src="./assets/js/main.js"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=1.1"></script>
 		</section>
 	</div>
 </body>
