--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="has-form-scale" data-step="1">
 	<header class="main">
-		<a href="#" class="logo">Swap.Online</a>
+		<a href="https://swap.online/" target="_blank" class="logo">SWAP.ONLINE</a>
 		<h1>Форма для выставления счетов Swap.Online</h1>
 		<span>Если вы сделали работу для Swap.Online, заполните эту форму, и мы заплатим вам.</span>
 		<div>
@@ -226,7 +226,7 @@
 				</div>
 				<footer></footer>
 			</article>
-			<script type="text/javascript" src="./assets/js/main.js?v=1.1"></script>
+			<script type="text/javascript" src="./assets/js/main.js"></script>
 		</section>
 	</div>
 </body>
