--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=1.1" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
