--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css?v=1.1" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=1.5" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
@@ -108,12 +108,12 @@
 					</div>
 					<div class="form-info">
 						<p>Оценка стоимости токена помогает увидеть, как сильно сотрудники верят в проект.</p>
-						<p>Swap.Online оставляет за собой право автоматически выкупить у вас токены по такой цене за ETH</p>
+						<p id="we-can-buy-your-tokens" class="-hidden">Swap.Online оставляет за собой право автоматически выкупить у вас токены по такой цене за ETH</p>
 					</div>
 					
 				</div>
 				<div class="form-description">
-					<p><strong>Всего будет выпущено 21 миллион SWAP токенов</strong>, которые будут торговаться на swap.online.</p>
+					<p><strong>Всего будет выпущено 21 миллион SWAP токенов</strong>, которые будут торговаться на <a href="https://swap.online/" target="_blank">swap.online</a>.</p>
 					<p>Swap токены нужны пользователям для повышения своего рейтинга в системе, оплаты услуг Swap.Online (повышение лимитов, залог для маркетмейкеров), расчетов между собой.</p>
 				</div>
 				<div class="form-row">
@@ -226,7 +226,7 @@
 				</div>
 				<footer></footer>
 			</article>
-			<script type="text/javascript" src="./assets/js/main.js?v=1.1"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=1.5"></script>
 		</section>
 	</div>
 </body>
