--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css?v=1.5" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=2.2" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
@@ -117,7 +117,10 @@
 						<p>Вы оценили капитализацию swap.online в <em class="form-user-capitalize">#### $</em> 
 						<span>
 							<strong></strong>
-							<em>Капитализация = Количество токенов умножить на цену одного токена</em>
+							<em>
+								Капитализация примерная. Считается так:
+								<u>Цена токена × общее количество выпущенных токенов</u>
+							</em>
 						</span>
 					</div>
 					<div class="other-capitalize-holder">
@@ -184,15 +187,15 @@
 							<span>На основании вашей оценки 1 Swap = $<em data-target="token-price">#</em></span>
 						</div>
 					</div>
-					<h4>Ваш Ethereum адрес</h4>
+					<h4>Адрес ETH-кошелька для Эфира</h4>
 					<input type="text" class="form-input-text" id="form-input-eth-address" placeholder="0x6c832654c7fe93ba8e98c740234bf385eb068900"/>
-					<div class="form-checkbox">
-						<input type="checkbox" checked id="form-input-eth-token-equal" />
-						<label>Совпадает с ETH-кошельком для Токенов</label>
-					</div>
-					<div id="for-token-address" class="hidden">
-						<h4>Ваш Ethereum адрес для токенов</h4>
+					<div id="for-token-address">
+						<h4>Адрес ETH-кошелька для Swap токенов</h4>
 						<input type="text" class="form-input-text" id="form-input-token-address" placeholder="0x6c832654c7fe93ba8e98c740234bf385eb068900"/>
+					</div>
+					<div class="form-checkbox">
+						<input type="checkbox" id="form-input-eth-token-equal" />
+						<label>Совпадает с ETH-кошельком для Токенов</label>
 					</div>
 					<span class="result-warning">Не указывайте Ethereum-адреса бирж, таких как ETH banker и прочее. Токены туда не придут.</span>
 					<h4>Мы рекомендуем использовать <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
@@ -234,7 +237,7 @@
 				</div>
 				<footer></footer>
 			</article>
-			<script type="text/javascript" src="./assets/js/main.js?v=1.5"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=2.2"></script>
 		</section>
 	</div>
 </body>
