--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css?v=2.4" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=2.6" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
@@ -199,7 +199,7 @@
 						<label data-state="on">Адрес ETH-кошелька для Swap токенов совпадает с ETH-кошельком для Эфира</label>
 					</div>
 					<span class="result-warning">
-						Внимание! Для получения Swap токенов не указывайте Ethereum-адреса бирж и обменников, таких как <a href="tg://resolve?domain=ETH_CHANGE_BOT" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> и прочее. Токены туда не придут.
+						Внимание! Для получения Swap токенов не указывайте Ethereum-адреса бирж и обменников, таких как <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> и прочее. Токены туда не придут.
 					</span>
 					<h4>Мы рекомендуем использовать <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
 				</div>
