confirm eth address some as token + english localization

--- a/indexen.html
+++ b/indexen.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Swap.Online - Форма для выставления счетов</title>
+	<title>Swap.Online - Invoicing form</title>
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -21,10 +21,10 @@
 <body class="has-form-scale" data-step="1">
 	<header class="main">
 		<a href="https://swap.online/" target="_blank" class="logo">SWAP.ONLINE</a>
-		<h1>Форма для выставления счетов Swap.Online</h1>
-		<span>Если вы сделали работу для Swap.Online, заполните эту форму, и мы заплатим вам.</span>
+		<h1>Swap.Online invoicing form</h1>
+		<span>If you did the work for Swap.Online, fill in the form, and we’ll pay you.</span>
 		<div>
-			<p>Прочитайте политику оплаты:</p>
+			<p>Please read pay policy:</p>
 			<a target="_blank" href="https://wiki.swap.online/pay-policy">https://wiki.swap.online/pay-policy</a>
 		</div>
 	</header>
@@ -32,50 +32,50 @@
 		<section class="form-wrapper" id="swap-online-form">
 			<article class="form-step-1 active" id="form-step-1">
 				<header>
-					<h1>Шаг 1 из 3</h1>
-					<h2>Основной счет</h2>
+					<h1>Step 1 of 3</h1>
+					<h2>Master account</h2>
 					<em></em>
 				</header>
 				<div class="form-row">
-					<label>Контакт (емейл, телеграм)</label>
+					<label>Contacts (e-mail, telegram)</label>
 					<input type="text" id="form-input-fio" placeholder="sasha@volkov.com" />
 				</div>
 				<div class="form-row form-dollar-eth-holder">
 					<div>
-						<label>Сколько мы вам должны?</label>
+						<label>How much shall we pay you?</label>
 						<input type="text" class="input-dollar" disabled="true" id="form-input-dollar" placeholder="455"/>
 					</div>
 					<div>
-						<label>Сумма в ETH</label>
+						<label>ETH amount</label>
 						<input type="text" class="input-eth" disabled="true" id="form-input-eth" placeholder="1"/>
 					</div>
 				</div>
 				<div class="form-row">
-					<label>Описание работы</label>
+					<label>Work description</label>
 					<ul class="form-work-holder form-work-one" id="form-works-holder">
 						<li class="form-work-row">
-							<input type="text" placeholder="Описание выполненной работы"/>
+							<input type="text" placeholder="Description of work accomplished"/>
 							<a href="#"></a>
 						</li>
 						<li class="form-work-row form-work-input-templ">
-							<input type="text" placeholder="Описание выполненной работы" />
+							<input type="text" placeholder="Description of work accomplished" />
 							<a href="#"></a>
 						</li>
 					</ul>
-					<a href="#" class="form-add-more-work">Добавить еще работу</a>
+					<a href="#" class="form-add-more-work">Add more work</a>
 				</div>
 				<footer>
-					<a href="#" class="form-button" id="form-go-to-step-2">Продолжить &rarr;</a>
+					<a href="#" class="form-button" id="form-go-to-step-2">Next &rarr;</a>
 				</footer>
 			</article>
 			<article class="form-step-2" id="form-step-2">
 				<header>
-					<h1>Шаг 2 из 3</h1>
-					<h2>Токены</h2>
+					<h1>Step 2 of 3</h1>
+					<h2>Tokens</h2>
 					<em></em>
 				</header>
 				<div class="form-row">
-					<label>Какую часть суммы вы хотите получить в токенах?</label>
+					<label>What portion of the amount would you like to get in tokens?</label>
 					<div class="form-input-droplist">
 						<input type="text" disabled="true" id="input-token-percent" value="10%" />
 						<input type="checkbox" />
@@ -94,7 +94,7 @@
 					</div>
 				</div>
 				<div class="form-row">
-					<label>Оцените стоимость 1 токена</label>
+					<label>Estimate the cost of 1 token</label>
 					<div class="form-input-roller">
 						<input type="hidden" id="input-token-price" />
 						<div class="form-input-roller-scroller">
@@ -107,14 +107,14 @@
 						<span class="form-input-roller-max">250$</span>
 					</div>
 					<div class="form-info">
-						<p>Оценка стоимости токена помогает увидеть, как сильно сотрудники верят в проект.</p>
+						<p>Estimation of token cost helps realize the employees’ belief in the project.</p>
 						<p id="we-can-buy-your-tokens" class="-hidden">Swap.Online оставляет за собой право автоматически выкупить у вас токены по такой цене за ETH</p>
 					</div>
 					
 				</div>
 				<div class="form-row">
 					<div class="form-user-capitalize">
-						<p>Вы оценили капитализацию swap.online в <em class="form-user-capitalize">#### $</em> 
+						<p>You’ve estimated swap.online capitalization in <em class="form-user-capitalize">#### $</em> 
 						<span>
 							<strong></strong>
 							<em>
@@ -141,14 +141,14 @@
 					</div>
 				</div>
 				<div class="form-description">
-					<p><strong>Всего будет выпущено 21 миллион SWAP токенов</strong>, которые будут торговаться на <a href="https://swap.online/" target="_blank">swap.online</a>.</p>
-					<p>Swap токены нужны пользователям для повышения своего рейтинга в системе, оплаты услуг Swap.Online (повышение лимитов, залог для маркетмейкеров), расчетов между собой.</p>
+					<p><strong>A total of 21 million SWAP tokens</strong> will be released to be traded on <a href="https://swap.online/" target="_blank">swap.online</a>.</p>
+					<p>Swap tokens are used by customers to raise their system rating, pay for Swap.Online services (raising limits, deposit for marketmakers), and settle up with each other.</p>
 				</div>
 				<footer>
 					
-					<a href="#" class="form-button" id="go-to-step-3">Продолжить &rarr;</a>
+					<a href="#" class="form-button" id="go-to-step-3">Next &rarr;</a>
 					<div class="form-tooltip">
-						<a href="#">Я не могу получить оплату в токенах</a>
+						<a href="#">I cannot get the payment in tokens</a>
 						<input type="checkbox" />
 						<div>
 							<p>По разным причинам вам могут быть срочно нужны деньги в фиате (в долларах или рублях). Если это случилось, и вы назвали минимальную сумму в долларах, меньше которой вы никак не можете получить (даже 10% в Swap токенах), то тогда напишите об этом <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a> в Телеграм.</p>
@@ -160,56 +160,56 @@
 			</article>
 			<article class="form-step-3" id="form-step-3">
 				<header>
-					<h1>Шаг 3 из 3</h1>
-					<h2>Подтверждение</h2>
+					<h1>Step 3 of 3</h1>
+					<h2>Confirmation</h2>
 					<em></em>
 				</header>
 				<div class="form-result-page">
-					<h3>Проверьте, всё ли корректно</h3>			
-					<h4>Вы сделали работу:</h4>
+					<h3>Please check the payment details</h3>			
+					<h4>You did the following work:</h4>
 					<ul class="result-work-holder" id="form-preview-work">
 						<li class="result-work-templ"></li>
 					</ul>
-					<h4>Итого вы сделали работ на <em data-target="total-money">$####</em></h4>
-					<span>Вы указали, что хотите получить <em data-target="token-percent">##%</em> оплаты в Swap токенах.</span>
-					<h4>Это значит, что:</h4>
-					<span><em data-target="eth-total">$###</em> мы отправим вам в Эфире</span>
-					<span><em data-target="token-total">$###</em> мы отправим вам в Swap токенах</span>
+					<h4>In total you will be paid <em data-target="total-money">$####</em></h4>
+					<span>You specified that you would like to get <em data-target="token-percent">##%</em> of the amount in Swap tokens.</span>
+					<h4>That means:</h4>
+					<span><em data-target="eth-total">$###</em> will be paid in Ether</span>
+					<span><em data-target="token-total">$###</em> will be paid in Swap tokens</span>
 					<div class="result-price-rows">
 						<div class="result-price-eth">
 							<strong><em data-target="eth-total">$###</em> = <em data-target="eth-count">##</em> ETH</strong>
-							<span>По текущему курсу</span>
+							<span>At current exchange rates</span>
 							<span>1 ETH = <em data-target="eth-price">$###</em></span>
-							<span>Данные <a href="https://coinmarketcap.com/" target="_blank">coinmarketcap</a></span>
+							<span>Source: <a href="https://coinmarketcap.com/" target="_blank">coinmarketcap</a></span>
 						</div>
 						<div class="result-price-token">
-							<strong><em data-target="token-total">$###</em> = <em data-target="token-count">###</em> Swap токенов</strong>
-							<span>На основании вашей оценки 1 Swap = $<em data-target="token-price">#</em></span>
+							<strong><em data-target="token-total">$###</em> = <em data-target="token-count">###</em> Swap tokens</strong>
+							<span>According to your estimation 1 Swap = $<em data-target="token-price">#</em></span>
 						</div>
 					</div>
-					<h4>Адрес ETH-кошелька для Эфира</h4>
+					<h4>ETH wallet address for Ether</h4>
 					<input type="text" class="form-input-text" id="form-input-eth-address" placeholder="0x6c832654c7fe93ba8e98c740234bf385eb068900"/>
 					<div id="for-token-address">
-						<h4>Адрес ETH-кошелька для Swap токенов</h4>
+						<h4>ETH wallet address for Swap tokens</h4>
 						<input type="text" class="form-input-text" id="form-input-token-address" placeholder="0x6c832654c7fe93ba8e98c740234bf385eb068900"/>
 					</div>
 					<div class="form-checkbox">
 						<input type="checkbox" id="form-input-eth-token-equal" />
-						<label data-state="off">Совпадает с ETH-кошельком для Эфира</label>
+						<label data-state="off">Same as ETH wallet for Ether</label>
 						<label data-state="on">Адрес ETH-кошелька для Swap токенов совпадает с ETH-кошельком для Эфира</label>
 					</div>
 					<span class="result-warning">
-						Внимание! Для получения Swap токенов не указывайте Ethereum-адреса бирж и обменников, таких как <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> и прочее. Токены туда не придут.
+						Attention! Don’t enter Ether addresses for the stocks and exchangers such as <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> etc. to get Swap tokens. The tokens won’t be received.
 					</span>
-					<h4>Мы рекомендуем использовать <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
+					<h4>We recommend you to use <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
 				</div>
 				<footer>
 					<div class="form-two-button">
-						<a href="#" class="form-button form-button-style-2" id="go-to-step-1">Исправить</a>
-						<a href="#" class="form-button" id="go-to-finish">Всё верно</a>
+						<a href="#" class="form-button form-button-style-2" id="go-to-step-1">Fix</a>
+						<a href="#" class="form-button" id="go-to-finish">Confirm</a>
 					</div>
 					<div class="form-tooltip">
-						<a href="#">Как обменять эфир на рубли</a>
+						<a href="#">How can I exchange Ether for rubles</a>
 						<input type="checkbox" />
 						<div>
 							<p>Отправьте ETH с вашего Ethereum кошелька (например, Матамакс) боту в Телеграм <a href="tg://resolve?domain=ETH_CHANGE_BOT">@ETH_CHANGE_BOT</a>.</p>
@@ -221,7 +221,7 @@
 			<article class="form-finish" id="form-finish">
 				<em class="finish-icon"></em>
 				<h1>Ваш счёт выставлен</h1>
-				<h2>Для ускорения процесса оплаты напишите в Telegram <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a></h2>
+				<h2>The payment will be made soon, for process acceleration please contact <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a></h2>
 				<h1>Вы получите:</h1>
 				<div class="ready-money">
 					<div class="money-eth">
