english localization google transle add mising labels

--- a/indexen.html
+++ b/indexen.html
@@ -108,7 +108,7 @@
 					</div>
 					<div class="form-info">
 						<p>Estimation of token cost helps realize the employees’ belief in the project.</p>
-						<p id="we-can-buy-your-tokens" class="-hidden">Swap.Online оставляет за собой право автоматически выкупить у вас токены по такой цене за ETH</p>
+						<p id="we-can-buy-your-tokens" class="-hidden">Swap.Online reserves the right to automatically redeem your tokens at such a price for ETH</p>
 					</div>
 					
 				</div>
@@ -118,8 +118,8 @@
 						<span>
 							<strong></strong>
 							<em>
-								Капитализация примерная. Считается так:
-								<u>Цена токена × общее количество выпущенных токенов</u>
+								Capitalization is approximate. It is considered so:
+								<u>Price of the token × total number of released tokens</u>
 							</em>
 						</span>
 					</div>
@@ -151,9 +151,9 @@
 						<a href="#">I cannot get the payment in tokens</a>
 						<input type="checkbox" />
 						<div>
-							<p>По разным причинам вам могут быть срочно нужны деньги в фиате (в долларах или рублях). Если это случилось, и вы назвали минимальную сумму в долларах, меньше которой вы никак не можете получить (даже 10% в Swap токенах), то тогда напишите об этом <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a> в Телеграм.</p>
-							<p>По договорнности с <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a> вы можете увеличить изначальную сумму на 10%, чтобы получить 100% суммы в ETH и 10% сверху в Swap токенах.</p>
-							<p>Пожалуйста, используйте этот способ только в случае крайней необходимости. Мы вам доверяем.</p>
+							<p>For various reasons, you may urgently need money in Fiat (in dollars or rubles). If this happens, and you called the minimum amount in dollars, which you can not get less (even 10% in Swap tokens), then write about it <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a> in Telegram.</p>
+							<p>By agreement with <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a>, you can increase the initial amount by 10% to get 100% of the amount in ETH and 10% from above in Swap tokens.</p>
+							<p>Please use this method only in case of emergency. We trust you.</p>
 						</div>
 					</div>
 				</footer>
@@ -196,7 +196,7 @@
 					<div class="form-checkbox">
 						<input type="checkbox" id="form-input-eth-token-equal" />
 						<label data-state="off">Same as ETH wallet for Ether</label>
-						<label data-state="on">Адрес ETH-кошелька для Swap токенов совпадает с ETH-кошельком для Эфира</label>
+						<label data-state="on">The address for Swap tokens coincides with the Ether address</label>
 					</div>
 					<span class="result-warning">
 						Attention! Don’t enter Ether addresses for the stocks and exchangers such as <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> etc. to get Swap tokens. The tokens won’t be received.
@@ -212,17 +212,17 @@
 						<a href="#">How can I exchange Ether for rubles</a>
 						<input type="checkbox" />
 						<div>
-							<p>Отправьте ETH с вашего Ethereum кошелька (например, Матамакс) боту в Телеграм <a href="tg://resolve?domain=ETH_CHANGE_BOT">@ETH_CHANGE_BOT</a>.</p>
-							<p>Бот помогает обменивать ETH на рубли и не только.</p>
+							<p>Send ETH from your Ethereum wallet (for example, Matamax) to the bot in Telegram <a href="tg://resolve?domain=ETH_CHANGE_BOT">@ETH_CHANGE_BOT</a>.</p>
+							<p>Bot helps to exchange ETH for rubles and not only.</p>
 						</div>
 					</div>
 				</footer>
 			</article>
 			<article class="form-finish" id="form-finish">
 				<em class="finish-icon"></em>
-				<h1>Ваш счёт выставлен</h1>
+				<h1>Your invoicing is billed</h1>
 				<h2>The payment will be made soon, for process acceleration please contact <a href="tg://resolve?domain=sashanoxon">@sashanoxon</a></h2>
-				<h1>Вы получите:</h1>
+				<h1>You will receive:</h1>
 				<div class="ready-money">
 					<div class="money-eth">
 						<strong data-target="eth-count">#####</strong>
@@ -240,7 +240,7 @@
 				</div>
 				<footer></footer>
 			</article>
-			<p class="confirm-answer">Вы уверены что для получения токенов не указали адрес обменника (бота или биржи) и сможете снять токены?</p>
+			<p class="confirm-answer">Are you sure that to get the tokens did not specify the address of the exchanger (bot or exchange) and be able to remove tokens?</p>
 			<script type="text/javascript" src="./assets/js/main.js?v=3.0"></script>
 		</section>
 	</div>
