--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 						<input type="checkbox" />
 						<ul>
 							<li data-value="10%">10%</li>
+							<li data-value="15%">15%</li>
 							<li data-value="20%">20%</li>
 							<li data-value="30%">30%</li>
 							<li data-value="40%">40%</li>
@@ -90,6 +91,7 @@
 							<li data-value="80%">80%</li>
 							<li data-value="90%">90%</li>
 							<li data-value="100%">100%</li>
+							<li data-value="0%">0% Расходка</li>
 						</ul>
 					</div>
 				</div>
