how to correct fill form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 			<p>Прочитайте политику оплаты:</p>
 			<a target="_blank" href="https://wiki.swap.online/pay-policy">https://wiki.swap.online/pay-policy</a>
 		</div>
+		<div class="-one-step-hidden">
+			<p>Как правильно заполнять Invoice, и Как обменять Эфир на рубли</p>
+			<a target="_blank" href="https://wiki.swap.online/ru/kak-pravilno-zapolnyat-invoice-i-kak-obmenyat-efir-na-rubli/">https://wiki.swap.online/ru/kak-pravilno-zapolnyat-invoice-i-kak-obmenyat-efir-na-rubli/</a>
+		</div>
 	</header>
 	<div id="swap-online-form-holder">
 		<section class="form-wrapper" id="swap-online-form">
