other tokens list height and english version text correcting

--- a/indexen.html
+++ b/indexen.html
@@ -109,14 +109,14 @@
 						<span class="form-input-roller-max">250$</span>
 					</div>
 					<div class="form-info">
-						<p>Estimation of token cost helps realize the employees’ belief in the project.</p>
+						<!--<p>Estimation of token cost helps realize the employees’ belief in the project.</p>-->
 						<p id="we-can-buy-your-tokens" class="-hidden">Swap.Online reserves the right to automatically redeem your tokens at such a price for ETH</p>
 					</div>
 					
 				</div>
 				<div class="form-row">
 					<div class="form-user-capitalize">
-						<p>You’ve estimated swap.online capitalization in <em class="form-user-capitalize">#### $</em> 
+						<p>You’ve estimated swap.online capitalization in <em class="form-user-capitalize">#### $</em>
 						<span>
 							<strong></strong>
 							<em>
