--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<li data-value="80%">80%</li>
 							<li data-value="90%">90%</li>
 							<li data-value="100%">100%</li>
-							<li data-value="0%">0% Расходка</li>
+							<li data-value="0%">Расходка</li>
 						</ul>
 					</div>
 				</div>
