--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 			<p>Как правильно заполнять Invoice, и Как обменять Эфир на рубли</p>
 			<a target="_blank" href="https://wiki.swap.online/ru/kak-pravilno-zapolnyat-invoice-i-kak-obmenyat-efir-na-rubli/">https://wiki.swap.online/ru/kak-pravilno-zapolnyat-invoice-i-kak-obmenyat-efir-na-rubli/</a>
 		</div>
+		
+		
 	</header>
 	<div id="swap-online-form-holder">
 		<section class="form-wrapper" id="swap-online-form">
@@ -80,24 +82,40 @@
 				</header>
 				<div class="form-row -one-step-hidden">
 					<label>Какую часть суммы вы хотите получить в токенах?</label>
+
 					<div class="form-input-droplist">
 						<input type="text" disabled="true" id="input-token-percent" value="10%" />
 						<input type="checkbox" />
 						<ul>
 							<li data-value="10%">10%</li>
 							<li data-value="15%">15%</li>
-							<li data-value="20%">20%</li>
-							<li data-value="30%">30%</li>
-							<li data-value="40%">40%</li>
-							<li data-value="50%">50%</li>
-							<li data-value="60%">60%</li>
-							<li data-value="70%">70%</li>
-							<li data-value="80%">80%</li>
-							<li data-value="90%">90%</li>
-							<li data-value="100%">100%</li>
+							<li data-value="20%">20% (бонус x2 токенов)</li>
+							<li data-value="30%">30% (бонус x3 токенов)</li>
+							<li data-value="40%">40% (бонус x4 токенов)</li>
+							<li data-value="50%">50% (бонус x5 токенов)</li>
+							<li data-value="60%">60% (бонус x5 токенов)</li>
+							<li data-value="70%">70% (бонус x5 токенов)</li>
+							<li data-value="80%">80% (бонус x5 токенов)</li>
+							<li data-value="90%">90% (бонус x5 токенов)</li>
+							<li data-value="100%">100% (бонус x10 токенов)</li>
 							<li data-value="0%">Расходка</li>
 						</ul>
 					</div>
+					sdf
+					<div class="form-info">
+						<p>Прогрессивный бонус для тех, кто верит в проект и хочет много заработать в случае успеха проекта. Если вы выбираете долю оплаты в SWAP токенах более 20%, вам будет отправлено в 2-3-4-5 раз больше токенов.
+			
+
+						20% — ×2 <br>
+						30% — ×3 <Br>
+						40% — ×4 <br>
+						50% — ×5 <br>
+
+						<b style="color:red">(действует только в августе)</b>
+						</p>
+					</div>
+					
+					
 				</div>
 				<div class="form-row">
 					<label>Оцените стоимость 1 токена</label>
