logic for bonus token multiple + break cache

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css?v=4.3" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=5.0" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
@@ -101,17 +101,13 @@
 							<li data-value="0%">Расходка</li>
 						</ul>
 					</div>
-					sdf
 					<div class="form-info">
-						<p>Прогрессивный бонус для тех, кто верит в проект и хочет много заработать в случае успеха проекта. Если вы выбираете долю оплаты в SWAP токенах более 20%, вам будет отправлено в 2-3-4-5 раз больше токенов.
-			
-
-						20% — ×2 <br>
-						30% — ×3 <Br>
-						40% — ×4 <br>
-						50% — ×5 <br>
-
-						<b style="color:red">(действует только в августе)</b>
+						<p>Прогрессивный бонус для тех, кто верит в проект и хочет много заработать в случае успеха проекта. Если вы выбираете долю оплаты в SWAP токенах более 20%, вам будет отправлено в 2-3-4-5 раз больше токенов.<br />
+							20% — ×2 <br />
+							30% — ×3 <br />
+							40% — ×4 <br />
+							50% — ×5 <br />
+							<b style="color:red">(действует только в августе)</b>
 						</p>
 					</div>
 					
@@ -211,6 +207,14 @@
 						<div class="result-price-token">
 							<strong><em data-target="token-total">$###</em> = <em data-target="token-count">###</em> Swap токенов</strong>
 							<span>На основании вашей оценки 1 Swap = $<em data-target="token-price">#</em></span>
+							<div class="result-bonus-token">
+								<strong>
+									+ <em data-target="token-bonus"><u data-target="token-bonus-count">###</u> (x<u data-target="token-bonus-mult">2</u> Бонус)</em>
+								</strong>
+								<strong>
+									= <em data-target="token-bonus-result">###</em> Swap токенов
+								</strong>
+							</div>
 						</div>
 					</div>
 					<h4>Адрес ETH-кошелька для Эфира</h4>
@@ -267,7 +271,7 @@
 				<footer></footer>
 			</article>
 			<p class="confirm-answer">Вы уверены что для получения токенов не указали адрес обменника (бота или биржи) и сможете снять токены?</p>
-			<script type="text/javascript" src="./assets/js/main.js?v=4.3"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=5.0"></script>
 		</section>
 	</div>
 </body>
