maintance display none

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
 </head>
 <body class="has-form-scale" data-step="1">
+
+<h1 style="display:none;color:red;font-size:40px">Просьба не выставлять счета, обновляем систему, выставите завтра, когда это сообщение исчезнет</h1>
+
 	<header class="main">
 		<a href="https://swap.online/" target="_blank" class="logo">SWAP.ONLINE</a>
 		<h1>Форма для выставления счетов Swap.Online</h1>
