--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					<span class="result-warning">
 						Внимание! Для получения Swap токенов не указывайте Ethereum-адреса бирж и обменников, таких как <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> и прочее. Токены туда не придут.
 					</span>
-					<h4>Мы рекомендуем использовать <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
+					<h4>Для токенов Мы рекомендуем использовать адрес который вы найдете на главной странице <a href="https://swap.online" target="_blank">swap.online</a> (не забудьте сохранить ключи)</h4>
 				</div>
 				<footer>
 					<div class="form-two-button">
