--- a/indexen.html
+++ b/indexen.html
@@ -222,7 +222,7 @@
 					<span class="result-warning">
 						Attention! Don’t enter Ether addresses for the stocks and exchangers such as <a href="https://t.me/eth_change_banker_bot" target="_blank">ETH Banker Bot</a>, <a href="https://www.binance.com/" target="_blank">Binance</a> etc. to get Swap tokens. The tokens won’t be received.
 					</span>
-					<h4>We recommend you to use <a href="https://metamask.io/" target="_blank">metamask.io</a></h4>
+					<h4>For tokens we recommend using the address you find on the main page of <a href="https://swap.online" target="_blank">swap.online</a> (do not forget to save the keys)</h4>
 				</div>
 				<footer>
 					<div class="form-two-button">
