--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 						<input type="text" disabled="true" id="input-token-percent" value="10%" />
 						<input type="checkbox" />
 						<ul>
+							<!--
 							<li data-value="10%">10%</li>
 							<li data-value="15%">15%</li>
 							<li data-value="20%">20% (бонус x2 токенов)</li>
@@ -101,9 +102,22 @@
 							<li data-value="80%">80% (бонус x5 токенов)</li>
 							<li data-value="90%">90% (бонус x5 токенов)</li>
 							<li data-value="100%">100% (бонус x10 токенов)</li>
+							-->
+							<li data-value="10%">10%</li>
+							<li data-value="15%">15%</li>
+							<li data-value="20%">20%</li>
+							<li data-value="30%">30%</li>
+							<li data-value="40%">40%</li>
+							<li data-value="50%">50%</li>
+							<li data-value="60%">60%</li>
+							<li data-value="70%">70%</li>
+							<li data-value="80%">80%</li>
+							<li data-value="90%">90%</li>
+							<li data-value="100%">100%</li>
 							<li data-value="0%">Расходка</li>
 						</ul>
 					</div>
+					<!--
 					<div class="form-info">
 						<p>Прогрессивный бонус для тех, кто верит в проект и хочет много заработать в случае успеха проекта. Если вы выбираете долю оплаты в SWAP токенах более 20%, вам будет отправлено в 2-3-4-5 раз больше токенов.<br />
 							20% — ×2 <br />
@@ -113,8 +127,7 @@
 							<b style="color:red">(действует только в августе)</b>
 						</p>
 					</div>
-					
-					
+					-->
 				</div>
 				<div class="form-row">
 					<label>Оцените стоимость 1 токена</label>
@@ -274,7 +287,7 @@
 				<footer></footer>
 			</article>
 			<p class="confirm-answer">Вы уверены что для получения токенов не указали адрес обменника (бота или биржи) и сможете снять токены?</p>
-			<script type="text/javascript" src="./assets/js/main.js?v=5.2"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=5.3"></script>
 		</section>
 	</div>
 </body>
