--- a/indexen.html
+++ b/indexen.html
@@ -80,6 +80,7 @@
 						<input type="text" disabled="true" id="input-token-percent" value="10%" />
 						<input type="checkbox" />
 						<ul>
+							<!--
 							<li data-value="10%">10%</li>
 							<li data-value="15%">15%</li>
 							<li data-value="20%">20% (bonus x2 tokens)</li>
@@ -91,9 +92,22 @@
 							<li data-value="80%">80% (bonus x8 tokens)</li>
 							<li data-value="90%">90% (bonus x9 tokens)</li>
 							<li data-value="100%">100% (bonus x10 tokens)</li>
+							-->
+							<li data-value="10%">10%</li>
+							<li data-value="15%">15%</li>
+							<li data-value="20%">20%</li>
+							<li data-value="30%">30%</li>
+							<li data-value="40%">40%</li>
+							<li data-value="50%">50%</li>
+							<li data-value="60%">60%</li>
+							<li data-value="70%">70%</li>
+							<li data-value="80%">80%</li>
+							<li data-value="90%">90%</li>
+							<li data-value="100%">100%</li>
 							<li data-value="0%">0% - Consumables</li>
 						</ul>
 					</div>
+					<!--
 					<div class="form-info">
 						<p>Progressive bonus for those who believe in the project and want to earn a lot if the project succeeds. If you choose a payment share in SWAP tokens of more than 20%, you will be sent 2-3-4-5 times more tokens. <br />
 							20% — ×2 <br />
@@ -103,6 +117,7 @@
 							<b style="color:red">(valid only in August)</b>
 						</p>
 					</div>
+					-->
 				</div>
 				<div class="form-row">
 					<label>Estimate the cost of 1 token</label>
@@ -262,7 +277,7 @@
 				<footer></footer>
 			</article>
 			<p class="confirm-answer">Are you sure that to get the tokens did not specify the address of the exchanger (bot or exchange) and be able to remove tokens?</p>
-			<script type="text/javascript" src="./assets/js/main.js?v=5.2"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=5.3"></script>
 		</section>
 	</div>
 </body>
